# pryst

./: .coveragerc  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.bak  LICENSE  LICENSE.md  Pryst.g4  PrystLexer.g4  PrystParser.g4  README.md  TODO.md  TODO_RUNTIME.md  appveyor.yml  build.sh  ci.jsonnet  cleanup.sh  conanfile.txt  current_includes.txt  generate_parser.sh  llvm_namespace_todo.txt  local_build.sh  method_calls.txt  namespace_refs.txt  namespace_todo.txt  pom.xml  pryst  pryst.ps1  requirements.txt  revert_todo.txt  run.sh  setup.py  source_files.txt  test_entryp.py  todo.txt  todo_files.txt
.antlr/: Pryst.interp  PrystBaseListener.java  PrystLexer.interp  PrystLexer.java  PrystListener.java  PrystParser.java
.github/: FUNDING.yml
antlr4-runtime/: PrystBaseVisitor.cpp  PrystBaseVisitor.h  PrystLexer.cpp  PrystLexer.h  PrystParser.cpp  PrystParser.h  PrystVisitor.cpp  PrystVisitor.h
cmake/: FindANTLR.cmake  FindANTLR4.cmake  antlr4-generator.cmake
component/: clean_component.sh  make_component.sh  pom.xml
conan/: conanfile.txt
consolidated/: fix_files.txt
docs/: PATHS.md  SPEC_ANALYSIS.md  circular_dependencies.md  namespace_resolution.md  namespace_resolution_analysis.md  namespace_system_analysis.md  type_lookup_analysis.md  type_system.md  type_system_analysis.md  type_system_flow.md
examples/: abs_test.pst  anonymous_functions_test.pst  array_test.pst  block_scope_test.pst  class.pst  class_method_test.pst  closure_test.pst  comprehensive_test.pst  const_test.pst  file_io_test.pst  function_types_test.pst  hello.pst  lambda_comprehensive_test.pst  lambda_function_test.pst  lambda_test.pst  logger_test.pst  logger_test_simple.pst  map_test.pst  math_functions_comprehensive.pst  math_functions_test.pst  math_test.pst  module_import_test.pst  module_test.pst  nested_function_test.pst  numeric_literals.pst  numeric_simple.pst  numeric_test.pst  pow_test.pst  print  print.pst  print_test.pst  print_test_simple.pst  print_types_test.pst  reflection_test.pst  return_test.pst  simple_print.pst  simple_sqrt.pst  simple_test.pst  simple_var.pst  sqrt_test.pst  (+9 more)
include/: scope_manager.hpp  type.hpp  type_checker.hpp  type_registry.hpp
language/: pom.xml
launcher/: pom.xml
libs/: Pryst.interp  Pryst.tokens  PrystBaseVisitor.cpp  PrystBaseVisitor.h  PrystLexer.cpp  PrystLexer.h  PrystLexer.interp  PrystParser.cpp  PrystParser.h  PrystVisitor.cpp  PrystVisitor.h
native/: README.md  clean_native.sh  make_native.sh  pom.xml
pryst/: .gitignore  (+2 more)
src/utils/: CMakeLists.txt  debug.cpp  debug.hpp  debug.hpp.new.consolidated  error_handling.hpp  logger.cpp  logger.cpp.new.consolidated  logger.hpp  logger.hpp.new.consolidated
test/: CMakeLists.txt  test_runner.cpp  type_registry_test.cpp
test/class/: class_members_test.pst
test/comprehensive/: visitor_test.pst
test/debug/: debug_test.pst
test/expressions/: comprehensive_test.pst
test/modules/: block_scope_test.pst  comprehensive_module_test.pst  edge_cases_test.pst  interface_impl_test.pst  interface_test.pst  interface_test.psti  module_test.pst  nested_import_test.pst  scope_test.pst  test_import.pst  test_module.pst  test_module_alias.pst  test_module_import.pst  test_wildcard_import.pst
test/modules/math/: math_module.pst
test/modules/string/: string_module.pst
test/modules/test/data/: types.pst
test/modules/test/math/: operations.pst
test/modules/test/utils/: strings.pst
test/reflection/: comprehensive_test.pst  inheritance_test.pst  reflection_test.pst  type_conversion_test.pst  type_reflection_test.pst
test/string_interpolation/: comprehensive_test.pst  escape_sequence_test.pst  format_test.pst  string_format_test.pst  string_interpolation_test.pst
test/try_catch/: try_catch_test.pst
test/type_conversion/: basic_conversion_test.pst  chained_conversion_test.pst  class_cast_test.pst  comprehensive_test.pst  edge_cases_test.pst  memory_test.pst  primitive_cast_test.pst
test/type_registry/: type_registry_test.pst
test/types/: type_conversion_test.pst  type_registry_test.pst
test/variables/: variable_declaration_test.pst
tests/: CMakeLists.txt  array_type_test.cpp  error_chain_test.cpp  error_handling_test.cpp  error_propagation_complex_test.cpp  error_propagation_integration_test.cpp  error_propagation_nullable_test.cpp  error_test_helpers.hpp  function_type_test.cpp  higher_kinded_type_error_test.cpp  intersection_type_error_test.cpp  multi_type_arithmetic_test.cpp  null_safety_test.cpp  null_test.pst  nullable_test.cpp  nullable_type_test.cpp  nullable_types.pst  opaque_pointer_test.pst  scope_inheritance_test.cpp  test_runner.cpp  test_type_checker.hpp  test_utils.hpp  type_checker_error_propagation_test.cpp  type_checker_tests.cpp  type_coercion_test.cpp  type_inference_test.cpp  type_system_test.cpp  union_intersection_test.cpp  union_type_error_test.cpp
tests/advanced/: TODO.md  array_type_test.cpp  async_error_handling_test.cpp  complex_error_chain_test.cpp  concurrent_error_handling_test.cpp  error_chain_integration_test.cpp  error_handling_test.cpp  error_transformation_test.cpp  generic_type_error_test.cpp  llvm_type_integration_test.cpp  parameterized_type_error_test.cpp  recursive_type_error_test.cpp  scope_integration_test.cpp  scope_manager_test.cpp  type_checker_integration_test.cpp  type_checker_test.cpp  type_inference_test.cpp  type_promotion_test.cpp  type_system_integration_test.cpp  type_system_test.cpp  web_type_integration_test.cpp
tests/core/: class_test.pst  comprehensive.pst  comprehensive_test.pst  file_debug_test.pst  file_namespace_test.pst  file_test.pst  function_test.pst  io_test.pst  lambda_test.pst  map_test.pst  null_test.pst  parser_test.pst  runtime_functions_test.pst  test.pst  type_conversion_test.pst  webserver_test.pst
tests/core/cpp/: array_type_test.cpp  function_type_test.cpp  map_type_test.cpp  nullable_pst_test.cpp  parser_test.cpp  type_operators_test.cpp  type_ops_test.cpp
tests/core/cpp/runtime/: io_test.cpp
tests/reflection/: type_reflection_test.pst
tests/web/: web_test.pst  webserver_test.cpp
(+481 files in other folders)
